@@ -1,17 +1,14 @@
 package com.uteq.sgtic.services.impl.student;
 
 import com.uteq.sgtic.dtos.student.DegreeOptionDTO;
-import com.uteq.sgtic.entities.DegreeOption;
 import com.uteq.sgtic.repository.General.DegreeOptionRepository;
 import com.uteq.sgtic.services.student.IDegreeOptionService;
-
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Service
+@Service("studentDegreeOptionService")
 @RequiredArgsConstructor
 public class DegreeOptionServiceImpl implements IDegreeOptionService {
 
@@ -19,14 +16,13 @@ public class DegreeOptionServiceImpl implements IDegreeOptionService {
 
     @Override
     public List<DegreeOptionDTO> getActiveOptionsByCareer(Integer idCarrera) {
-        List<DegreeOption> options = degreeOptionRepository.findActiveByCareerId(idCarrera);
-        
-        return options.stream()
-                .map(option -> new DegreeOptionDTO(
-                        option.getIdOption(),
-                        option.getName(),
-                        option.getDescription()
+        return degreeOptionRepository.findActiveByCareerId(idCarrera)
+                .stream()
+                .map(p -> new DegreeOptionDTO(
+                        p.getIdOption(),
+                        p.getNombre(),
+                        p.getDescripcion()
                 ))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
